<resources>

    <!-- App lables -->

    <string name="app_name">MyCVs</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_home">My CVs</string>
    <string name="app_uid_label">SmartCampus</string>
    <string name="date_format">dd/MM/yy</string>

    <!-- Labels -->

    <string name="my_portfolios">My CVs</string>
    <string name="portfolio">My CV</string>
    <string name="projects">Projects</string>
    <string name="noticeboard">Notice board</string>
    <string name="title">Title</string>
    <string name="media">Media</string>
    <string name="subtitle">Subtitle</string>
    <string name="tags">Tags</string>
    <string name="date">Date</string>
    <string name="study_program">Study program</string>
    <string name="course">Course</string>
    <string name="credit_points">CFU</string>
    <string name="grade">Grade</string>
    <string name="object">Object</string>
    <string name="description">Description</string>
    <string name="new_portfolio">New CV</string>
    <string name="tutorial_portfolio">Tutorial</string>
    <string name="role_in_prj">Role in the project</string>
    <string name="create">Create</string>
    <string name="refresh_portfolio">Refresh</string>
    <string name="trash_portfolio">Delete</string>
    <string name="export_portfolio">Export</string>
    <string name="share_portfolio">Share</string>
    <string name="tag_portfolio">Tag</string>
    <string name="edit_portfolio">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="identity_info">Identity information</string>
    <string name="languages">Languages</string>
    <string name="skills">Skills</string>
    <string name="video_content">Video content</string>
    <string name="contacts">Contacts</string>
    <string name="personal_info">Personal info</string>
    <string name="presentation">Presentation</string>
    <string name="overview">Overview</string>
    <string name="study">Study</string>
    <string name="work">Work</string>
    <string name="unitn">Università di Trento</string>
    <string name="comments">Comments</string>
    <string name="recommendations">Recommendations</string>
    <string name="please_commit_your_changes">Please save your changes before continuing</string>
    <string name="more_about_me">More about me</string>
    <string name="no_other_info_contained">No other information contained</string>
    <string name="insert_title_portfolio">Insert a title…</string>
    <string name="name_surname">First name and last name:</string>
    <string name="nation">Citizenship:</string>
    <string name="cfu">CFU:</string>
    <string name="marks_average">Average grade:</string>
    <string name="gender">Gender:</string>
    <string name="date_of_birth">Birthday:</string>
    <string name="academic_year">Academic year:</string>
    <string name="enrollment_year">Enrollment year:</string>
    <string name="phone">Phone:</string>
    <string name="mobile">Mobile:</string>
    <string name="address">Address:</string>
    <string name="marks">Marks:</string>
    <string name="study_course">Study course:</string>

    <!-- Messages for user -->
    <string name="yes_continue">Continue</string>
    <string name="done">Done</string>
    <string name="login">Login</string>
    <string name="save">Save</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="item_is_not_shown">Pay attention please:\nThis item is not shown.</string>
    <string name="pay_attention">Pay attention please.</string>
    <string name="be_careful">Be careful!</string>
    <string name="sure_to_continue_without_save">Are you sure that you want to continue without saving your progress?</string>
    <string name="sure_to_show_these_data">By turning this on, your university marks will now be visible to other users if you share this CV.</string>
    <string name="add_notes">Add here some notes&#8230;</string>
    <string name="no_connection_available">No connection available.</string>
    <string name="not_valid_name">Not a valid name.</string>
    <string name="not_valid_credentials">Not valid credentials.\nPlease rewrite them.</string>
    <string name="no_server_available">Unfortunately the server is not availble.\nPlease come back later..</string>
    <string name="remember_access_data">Remember access data.</string>
    <string name="password">Password</string>
    <string name="cherry_on_the_cake">Cherry on the cake</string>
    <string name="not_valid_email">The email is not valid.</string>
    <string name="fill_email_field">Please fill email field.</string>
    <string name="fill_username_field">Please fill username field.</string>
    <string name="fill_title_portfolio_field">Please fill title field.</string>
    <string name="fill_password_field">Please fill password field.</string>
    <string name="fill_tags_field">Please fill tags field.</string>
    <string name="tags_successfully_added">Tags successfully added.</string>
    <string name="tags_not_added">An error occurred. Please try later.</string>
    <string name="not_found_news">No news found.</string>
    <string name="not_found_portfolios">No CVs found.</string>
    <string name="not_found_data">No data found.</string>
    <string name="tip_add_tags">Type your tags separated by commas.</string>
    <string name="an_error_has_occured">An error has occured. Sorry.</string>
    <string name="cannot_find_portfolio">The selected CV could not be opened.</string>
    <string name="portfolio_already_exist">This CV\'s name already exists</string>
    <string name="sure_delete_portfolio">Are you sure you want to delete this CV?</string>
    <string name="problem_delete_portfolio">We had a problem deleting your CV</string>

    <!-- Portfolios -->
    <string name="edit">Filter</string>
    <string name="filter">Filter</string>
    <string name="app_failure_security">Failed to retrieve authentication data</string>
    <string name="app_failure_setup">Failed to initialize application</string>
    <string name="app_failure_operation">OOPS! An error occurred. Please check your connection or try again later</string>
    <string name="welcome_msg">Hello! Welcome to  MyCVs for Android. This app will allow you to manage your CVs and write some notes about them.</string>
    <string name="welcome_msg2">You will automagically find your notes on the MyCVs web application (https://vas.smartcampuslab.it/mycvs), from which you will be able to edit and customize your CVs.</string>
    <string name="welcome_msg_showagain">Don\'t show this again</string>
    <string name="notes_hint">Add here any notes about your CVs: you will find them again on the MyCVs web page.</string>
    <string name="token_required">Please login before proceeding with the application.</string>
    <string name="open_browser_title">Warning</string>
    <string name="open_browser_message">You are leaving the app and entering in the Portfolio\'s website. Do you agree?</string>
    <string name="open_browser_checkbox">Do not show me this message again</string>
    
    
    <!-- Tutorial -->
    <string name="welcome_title">Welcome to MyCVs! </string>
    <string name="welcome_msg3">This app lets you access your academic information in order to keep track of this information, share it with your Smart Campus friends, or start creating your own CV.</string>
    <string name="tut_title_modify">Modify</string>
    <string name="tut_text_modify">Go to https://vas.smartcampuslab.it/portfolio/ to edit your profile</string>
    <string name="tut_title_create">Create</string>
    <string name="tut_text_create">Create a new CV from your personal information</string>
    
    <!-- Disclaimer -->
    <string name="disclaimer">This app uses some of the data from your University of Trento account. In order to fully use all of the functions of this app, you will  first have to give the University permission to release your data to Smart Campus. Please go to the following website, sign into your UniTn account, and fill out the form:\n\n https://webapps.unitn.it/Apply/it/Web/GoHome/smartcampus/smartc</string>
	<string name="disclaimer_share"><![CDATA[<div style="text-align:justify;font-family:Arial;font-size:20px;padding:8px">Shared CVs are viewable within the MyPeople app.<br>Please use caution when sharing a CV: other users may be able to see your course marks.<br>As well, if you check "Public", it will be available to everyone in the Smart Campus community.</div>]]></string>
</resources>