<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2012-2013 Trento RISE
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
         http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either   express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <FrameLayout
        android:id="@+id/list_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer" >

        <ListView
            android:id="@id/android:list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="#00000000" />

        <!-- Empty label if ListView is empty -->

        <TextView
            android:id="@id/android:empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/not_found_data"
            android:textColor="@color/not_found"
            android:textSize="@dimen/not_found_data" />
    </FrameLayout>

    <!-- Row that allows user to modify visualization and cherry -->

     <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <!-- Separator -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/bold_separator_height"
            android:visibility="gone"
            android:background="@drawable/shadow" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <!-- Button to save all updates -->

            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="1.5dp"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:background="@drawable/blue_button"
                android:text="@string/save"
                android:textColor="@color/white" />

            <!-- Button to cancel all updates -->

            <Button
                android:id="@+id/cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="1.5dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:background="@drawable/blue_button"
                android:text="@string/cancel"
                android:textColor="@color/white" />
        </TableRow>
    </LinearLayout>

</RelativeLayout>
